# locomotion

./: .gitignore  Cargo.toml  LICENSE  MUJOCO_LOG.TXT  README.md
.cargo/: config.toml
examples/: test_mujoco.rs
models/: biped_simple.xml
src/: biped.rs  controller.rs  gait.rs  ik.rs  main.rs  mujoco_sim.rs  stability.rs  zmp.rs
